# skills

./: .gitignore
app-tear-down/: SKILL.md
cloudflare-dns-management/: .env.example  SETUP.md  SKILL.md
comfyui-flyer/: comfy_flyer.py
deploy-hermes-docker-agent/: .env.example  README.md  SKILL.md
deploy-openclaw/: SKILL.md
desktop-control-mint/: SETUP.md  SKILL.md
desktop-control-raspi/: SETUP.md  SKILL.md
desktop-control-wayland/: README.md  SKILL.md  desktop_helper.py  openclaw-screenshot-gnome  setup.sh
desktop-control-windows/: SETUP.md  SKILL.md
digitalocean-management/: .env.example  SETUP.md  SKILL.md
docs/: deployment.md  mcp-config-verified.md  mcp-configuration.md
draw-smiley-face/: SKILL.md
erpnext/: .env.example  SETUP.md  SKILL.md
firecrawl/: .env.example  SETUP.md  SKILL.md  docker-compose.yml  nuq-postgres-init.sql
ionos-dns-management/: .env.example  SETUP.md  SKILL.md
ionos-imap/: .env.example  SETUP.md  SKILL.md
ionos-imap/mcp-server/: pyproject.toml  server.json
ionos-imap/mcp-server/src/ionos_imap/: __init__.py  config.py  idle_worker.py  imap_client.py  models.py  server.py  state.py
ionos-smtp/: .env.example  SETUP.md  SKILL.md
ionos-smtp/mcp-server/: pyproject.toml  server.json
ionos-smtp/mcp-server/src/ionos_smtp/: __init__.py  config.py  models.py  queue_worker.py  server.py  smtp_client.py  state.py
mautic/: .env.example  API_ACCESS.md  SETUP.md  SKILL.md  docker-compose.yml
mines-game/: SKILL.md
ms-paint/: SKILL.md
n8n-api/: .env.example  SKILL.md
netlify-dns/: SETUP.md  SKILL.md
(+97 files in other folders)
